# ExcelFileCoparisionPy

./: .gitignore  ExcelComparator.py  PerformanceMetrics.py  comparison_report.html  comparison_report_2024-03-15_00-49-34.html  comparison_report_2024-03-15_09-50-38.html  comparison_report_2024-03-15_09-57-29.html  comparison_report_2024-03-15_10-11-38.html  comparison_report_2024-03-15_10-14-23.html  comparison_report_2024-03-15_10-15-45.html  comparison_report_2024-03-15_10-17-02.html  comparison_report_2024-03-15_10-27-30.html  comparison_report_2024-03-15_10-38-43.html  comparison_report_2024-03-15_10-39-24.html  performance_report.html  pyproject.toml  run.bat  workbook1.xlsx  workbook2.xlsx
