[tool.poetry]
name = "excelfilecoparisionpy"
version = "0.1.0"
description = "excel workbook comparison sheet tool in python"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
